# rust-experiments

./: .gitignore  Cargo.toml  README.md  flake.nix  main.rs  rust-toolchain.toml  rustfmt.toml  sleep.rs
.cargo/: config.toml
common/: Cargo.toml
common/src/: lib.rs
syscall/: Cargo.toml
syscall/src/: lib.rs
