[workspace]
resolver = "3"
members = ["syscall"]

[workspace.package]
edition = "2024"
publish = false

[workspace.dependencies]
syscall = { path = "syscall" }

[package]
name = "main"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[dependencies]
syscall.workspace = true

[[bin]]
name = "main"
path = "main.rs"
test = false
bench = false
