[workspace]
resolver = "3"
members = ["common", "syscall"]

[workspace.package]
edition = "2024"
publish = false

[workspace.dependencies]
common = { path = "common" }
syscall = { path = "syscall" }

[package]
name = "main"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[dependencies]
common.workspace = true

[[bin]]
name = "main"
path = "main.rs"
test = false
bench = false

[[bin]]
name = "sleep"
path = "sleep.rs"
test = false
bench = false
